--- a/src/main/resources/static/models/editor-app/css/style.css
+++ b/src/main/resources/static/models/editor-app/css/style.css
@@ -288,6 +288,7 @@ div.propertySection {
 .selected-item-body > div {
     overflow: hidden;
     margin: 5px 20px;
+    padding-bottom: 50px;
 }
 
 .property-row > span {
