--- a/src/main/resources/static/models/editor-app/partials/stencil-item-template.html
+++ b/src/main/resources/static/models/editor-app/partials/stencil-item-template.html
@@ -11,7 +11,7 @@
     ng-include="'editor-app/partials/stencil-item-template.html?version=5'">
 </ul>
 
-<!-- Group items -->
+<!-- ProductGroup items -->
 <ul>
     <li ng-repeat="item in group.paletteItems" class="stencil-item"
         id="{{item.id}}"
